--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
     body{
-        background-color: rgb(2, 2, 48);
+        background-color: rgb(129, 98, 229);
     }
 img{
     width: 15vw;
@@ -17,4 +17,8 @@ img{
 #squid{
     text-align: center;
     
+}
+
+p a{
+    color: blue;
 }
